// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Segmented Control DefaultVariant smoke-test 1`] = `
<div class="flex flex-col sm:flex-row gap-2">
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          md
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          sm
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          xs
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Segmented Control Disabled smoke-test 1`] = `
<div class="flex flex-col sm:flex-row gap-2">
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          md
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 cursor-not-allowed hover:bg-inherit dark:hover:bg-inherit active:bg-inherit dark:active:bg-inherit rounded-lg"
           tabindex="-1"
           role="button"
           aria-pressed="true"
           aria-disabled="true"
      >
        <span class="font-semibold transition-colors text-gui-unavailable dark:text-gui-unavailable-dark hover:text-gui-unavailable dark:hover:text-gui-unavailable-dark">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center select-none transition-colors bg-ably-primary-inverse text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 cursor-not-allowed hover:bg-inherit dark:hover:bg-inherit active:bg-inherit dark:active:bg-inherit rounded-lg"
           tabindex="-1"
           role="button"
           aria-pressed="false"
           aria-disabled="true"
      >
        <span class="font-semibold transition-colors text-gui-unavailable dark:text-gui-unavailable-dark hover:text-gui-unavailable dark:hover:text-gui-unavailable-dark">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          sm
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 cursor-not-allowed hover:bg-inherit dark:hover:bg-inherit active:bg-inherit dark:active:bg-inherit rounded-lg"
           tabindex="-1"
           role="button"
           aria-pressed="true"
           aria-disabled="true"
      >
        <span class="font-semibold transition-colors text-gui-unavailable dark:text-gui-unavailable-dark hover:text-gui-unavailable dark:hover:text-gui-unavailable-dark">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center select-none transition-colors bg-ably-primary-inverse text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 cursor-not-allowed hover:bg-inherit dark:hover:bg-inherit active:bg-inherit dark:active:bg-inherit rounded-lg"
           tabindex="-1"
           role="button"
           aria-pressed="false"
           aria-disabled="true"
      >
        <span class="font-semibold transition-colors text-gui-unavailable dark:text-gui-unavailable-dark hover:text-gui-unavailable dark:hover:text-gui-unavailable-dark">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          xs
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-9 p-2 gap-2 ui-text-label4 cursor-not-allowed hover:bg-inherit dark:hover:bg-inherit active:bg-inherit dark:active:bg-inherit rounded-lg"
           tabindex="-1"
           role="button"
           aria-pressed="true"
           aria-disabled="true"
      >
        <span class="font-semibold transition-colors text-gui-unavailable dark:text-gui-unavailable-dark hover:text-gui-unavailable dark:hover:text-gui-unavailable-dark">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center select-none transition-colors bg-ably-primary-inverse text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 ui-text-label4 cursor-not-allowed hover:bg-inherit dark:hover:bg-inherit active:bg-inherit dark:active:bg-inherit rounded-lg"
           tabindex="-1"
           role="button"
           aria-pressed="false"
           aria-disabled="true"
      >
        <span class="font-semibold transition-colors text-gui-unavailable dark:text-gui-unavailable-dark hover:text-gui-unavailable dark:hover:text-gui-unavailable-dark">
          Option 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Segmented Control Rounded smoke-test 1`] = `
<div class="flex flex-col sm:flex-row gap-2">
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          md
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-12 p-3 gap-2.5 px-[1.125rem] ui-text-label2 rounded-full"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 px-[1.125rem] ui-text-label2 rounded-full"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          sm
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] px-3.5 ui-text-label3 rounded-full"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] px-3.5 ui-text-label3 rounded-full"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          xs
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-9 p-2 gap-2 px-3 ui-text-label4 rounded-full"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 px-3 ui-text-label4 rounded-full"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Segmented Control StrongVariant smoke-test 1`] = `
<div class="bg-neutral-100 dark:bg-neutral-1200 rounded-lg p-4">
  <div class="flex flex-col sm:flex-row gap-2">
    <div class="flex flex-col gap-1">
      <div class="flex flex-col items-center">
        <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
          <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
            md
          </span>
        </div>
      </div>
      <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-secondary text-ably-primary-inverse h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="true"
        >
          <span class="font-semibold transition-colors text-ably-primary-inverse">
            Option 1
          </span>
        </div>
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-100 dark:bg-neutral-1200 hover:bg-neutral-200 dark:hover:bg-neutral-1100 active:bg-neutral-200 dark:active:bg-neutral-1100 text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="false"
        >
          <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
            Option 2
          </span>
        </div>
      </div>
    </div>
    <div class="flex flex-col gap-1">
      <div class="flex flex-col items-center">
        <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
          <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
            sm
          </span>
        </div>
      </div>
      <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-secondary text-ably-primary-inverse h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="true"
        >
          <span class="font-semibold transition-colors text-ably-primary-inverse">
            Option 1
          </span>
        </div>
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-100 dark:bg-neutral-1200 hover:bg-neutral-200 dark:hover:bg-neutral-1100 active:bg-neutral-200 dark:active:bg-neutral-1100 text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="false"
        >
          <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
            Option 2
          </span>
        </div>
      </div>
    </div>
    <div class="flex flex-col gap-1">
      <div class="flex flex-col items-center">
        <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
          <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
            xs
          </span>
        </div>
      </div>
      <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-secondary text-ably-primary-inverse h-9 p-2 gap-2 ui-text-label4 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="true"
        >
          <span class="font-semibold transition-colors text-ably-primary-inverse">
            Option 1
          </span>
        </div>
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-100 dark:bg-neutral-1200 hover:bg-neutral-200 dark:hover:bg-neutral-1100 active:bg-neutral-200 dark:active:bg-neutral-1100 text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="false"
        >
          <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
            Option 2
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Segmented Control SubtleVariant smoke-test 1`] = `
<div class="bg-neutral-100 dark:bg-neutral-1200 rounded-lg p-4">
  <div class="flex flex-col sm:flex-row gap-2">
    <div class="flex flex-col gap-1">
      <div class="flex flex-col items-center">
        <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
          <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
            md
          </span>
        </div>
      </div>
      <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="true"
        >
          <span class="font-semibold transition-colors text-ably-primary">
            Option 1
          </span>
        </div>
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-100 dark:bg-neutral-1200 hover:bg-neutral-200 dark:hover:bg-neutral-1100 active:bg-neutral-200 dark:active:bg-neutral-1100 text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="false"
        >
          <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
            Option 2
          </span>
        </div>
      </div>
    </div>
    <div class="flex flex-col gap-1">
      <div class="flex flex-col items-center">
        <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
          <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
            sm
          </span>
        </div>
      </div>
      <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="true"
        >
          <span class="font-semibold transition-colors text-ably-primary">
            Option 1
          </span>
        </div>
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-100 dark:bg-neutral-1200 hover:bg-neutral-200 dark:hover:bg-neutral-1100 active:bg-neutral-200 dark:active:bg-neutral-1100 text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="false"
        >
          <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
            Option 2
          </span>
        </div>
      </div>
    </div>
    <div class="flex flex-col gap-1">
      <div class="flex flex-col items-center">
        <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
          <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
            xs
          </span>
        </div>
      </div>
      <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="true"
        >
          <span class="font-semibold transition-colors text-ably-primary">
            Option 1
          </span>
        </div>
        <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-100 dark:bg-neutral-1200 hover:bg-neutral-200 dark:hover:bg-neutral-1100 active:bg-neutral-200 dark:active:bg-neutral-1100 text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
             tabindex="0"
             role="button"
             aria-pressed="false"
        >
          <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
            Option 2
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Segmented Control WithLeftIcon smoke-test 1`] = `
<div class="flex flex-col sm:flex-row gap-2">
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          md
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-primary"
             aria-hidden="true"
             style="width: 23px; height: 23px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r0:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r0:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-secondary hover:text-ably-primary"
             aria-hidden="true"
             style="width: 23px; height: 23px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r1:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r1:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          sm
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-primary"
             aria-hidden="true"
             style="width: 22px; height: 22px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r2:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r2:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-secondary hover:text-ably-primary"
             aria-hidden="true"
             style="width: 22px; height: 22px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r3:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r3:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          xs
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-primary"
             aria-hidden="true"
             style="width: 20px; height: 20px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r4:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r4:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-secondary hover:text-ably-primary"
             aria-hidden="true"
             style="width: 20px; height: 20px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r5:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r5:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Segmented Control WithRightIcon smoke-test 1`] = `
<div class="flex flex-col sm:flex-row gap-2">
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          md
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-primary"
             aria-hidden="true"
             style="width: 23px; height: 23px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r6:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r6:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-12 p-3 gap-2.5 ui-text-label2 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-secondary hover:text-ably-primary"
             aria-hidden="true"
             style="width: 23px; height: 23px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r7:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r7:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          sm
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-primary"
             aria-hidden="true"
             style="width: 22px; height: 22px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r8:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r8:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-10 p-[0.5625rem] gap-[0.5625rem] ui-text-label3 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-secondary hover:text-ably-primary"
             aria-hidden="true"
             style="width: 22px; height: 22px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:r9:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:r9:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div class="flex flex-col gap-1">
    <div class="flex flex-col items-center">
      <div class="inline-flex bg-neutral-100 dark:bg-neutral-1200 rounded-2xl gap-1 items-center focus-base transition-colors select-none font-semibold px-2.5 py-0.5 text-[11px] leading-normal text-neutral-900 dark:text-neutral-400 mb-2">
        <span class="whitespace-nowrap tracking-[0.04em] leading-[20px]">
          xs
        </span>
      </div>
    </div>
    <div class="flex gap-2 justify-center items-center p-2 border rounded-lg">
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-neutral-200 dark:bg-neutral-1100 text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="true"
      >
        <span class="font-semibold transition-colors text-ably-primary">
          Option 1
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-primary"
             aria-hidden="true"
             style="width: 20px; height: 20px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:ra:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:ra:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
      </div>
      <div class="focus-base flex items-center justify-center cursor-pointer select-none transition-colors bg-ably-primary-inverse hover:bg-neutral-100 dark:hover:bg-neutral-1200 active:bg-neutral-100 dark:active:bg-neutral-1200 text-ably-secondary hover:text-ably-primary h-9 p-2 gap-2 ui-text-label4 rounded-lg"
           tabindex="0"
           role="button"
           aria-pressed="false"
      >
        <span class="font-semibold transition-colors text-ably-secondary hover:text-ably-primary">
          Option 2
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="48"
             height="48"
             fill="none"
             viewbox="0 0 48 48"
             class="text-ably-secondary hover:text-ably-primary"
             aria-hidden="true"
             style="width: 20px; height: 20px;"
        >
          <defs>
            <clipPath id="clip0_1031_1922-:rb:">
              <path fill="#fff"
                    d="M0 0h48v48H0z"
              >
              </path>
            </clipPath>
          </defs>
          <g clip-path="url(#clip0_1031_1922-:rb:)">
            <path fill="#F7DF1E"
                  d="M46 0H2a2 2 0 0 0-2 2v44a2 2 0 0 0 2 2h44a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2"
            >
            </path>
            <path fill="#000"
                  d="M32.244 37.5c.967 1.579 2.225 2.74 4.45 2.74 1.868 0 3.062-.935 3.062-2.225 0-1.547-1.227-2.095-3.284-2.995l-1.127-.484c-3.255-1.386-5.417-3.123-5.417-6.796 0-3.382 2.577-5.958 6.605-5.958 2.868 0 4.93.998 6.416 3.612l-3.513 2.255c-.773-1.387-1.607-1.933-2.903-1.933-1.32 0-2.158.838-2.158 1.933 0 1.353.838 1.9 2.773 2.739l1.128.483c3.832 1.643 5.996 3.319 5.996 7.086 0 4.06-3.19 6.285-7.474 6.285-4.19 0-6.896-1.996-8.22-4.612zm-15.934.391c.709 1.257 1.353 2.32 2.903 2.32 1.482 0 2.417-.58 2.417-2.834V22.04h4.51v15.398c0 4.67-2.738 6.796-6.735 6.796-3.612 0-5.703-1.869-6.767-4.12z"
            >
            </path>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
